# cookiecutter-python

./: .gitignore  .yamlfmt.yaml  README.md  Taskfile.yml  cookiecutter.json  poetry.toml  pyproject.toml  renovate-global.json5  setup.cfg
.github-x/: README.md
.github-x/workflows/: validate.yml
.github/workflows/: dump-event.yml  renovate-approve.yml  renovate-env.yml  renovate-sx.yml  renovate.yml  ssh-debug.yml  validate.yml
examples/example.project/: Taskfile.yml  cookiecutter-input.yaml  pyproject.toml
examples/example.project.basic/: Taskfile.yml  cookiecutter-input.yaml  pyproject.toml
examples/example.project.basic/src/example/project/basic/cli/: __init__.py  sub.py
examples/example.project.basic/tests/: test_something.py
examples/example.project.defaults/: README.md  Taskfile.yml  cookiecutter-input.yaml  pyproject.toml
examples/example.project.defaults/src/example/project/defaults/cli/: __init__.py  sub.py
examples/example.project.defaults/tests/: test_something.py
examples/example.project.minimal/: README.md  Taskfile.yml  cookiecutter-input.yaml  pyproject.toml
examples/example.project.minimal/src/example/project/minimal/: cli.py
examples/example.project.minimal_typer/: AGENTS.md  README.md  Taskfile.yml  cookiecutter-input.yaml  pyproject.toml
examples/example.project.minimal_typer/src/example/project/minimal_typer/cli/: __init__.py  sub.py
examples/example.project.minimal_typer/tests/: test_something.py
examples/example.project.nocode/: README.md  Taskfile.yml  cookiecutter-input.yaml  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake.py
tests/data/cookie-config/: basic-make.yaml  basic.yaml  defaults.yaml  minimal.yaml  minimal_typer.yaml  nocode.yaml  poe_minimal.yaml
{{cookiecutter.project_dirname}}/: Makefile  README.md  Taskfile.yml  docker-compose.yaml  pyproject.toml
{{cookiecutter.project_dirname}}/devtools/: Dockerfile  Makefile  README.md  go.mod  go.sum  requirements.in  requirements.txt  tools.go
{{cookiecutter.project_dirname}}/devtools/renovate/: postprocess.sh  touch-branches.sh
{{cookiecutter.project_dirname}}/devtools/renovate/githooks/: post-checkout  pre-push
{{cookiecutter.project_dirname}}/pkg_files/basic/cli/: __init__.py  sub.py
{{cookiecutter.project_dirname}}/pkg_files/minimal/: cli.py
{{cookiecutter.project_dirname}}/pkg_files/minimal_typer/cli/: __init__.py  sub.py
