[project]
name = "aucampia.cookiecutter-python"
version = "0.0.0"
description = ""
authors = []
requires-python = ">=3.13,<4"
readme = "README.md"
license = "CC0-1.0"
dependencies = ["PyYAML>=6.0.3,<7"]

[dependency-groups]
dev = [
    "chardet>=5.2.0,<6",
    "codespell>=2.4.1,<3",
    "cookiecutter>=2.6.0,<3",
    "frozendict>=2.4.6,<3",
    "mypy>=1.18.2,<2",
    "pip-audit>=2.9.0,<3",
    "pytest-asyncio>=1.2.0,<2",
    "pytest-cookies>=0.7.0,<0.8",
    "pytest-cov>=7.0.0,<8",
    "pytest>=8.4.2,<9",
    "ruff>=0.14.3,<0.15",
    "types-frozendict>=2.0.9,<3",
    "types-PyYAML>=6.0.12.20250915,<7",
    "typing-extensions>=4.15.0,<5",
]
templates = [
    "poethepoet>=0.38,<0.39",
    "pydantic>=2.12.4,<3",
    "structlog>=25.5.0,<26",
    "typer>=0.20.0,<0.21",
]

[tool.uv]
default-groups = [
    "dev",
    "templates",
]

[tool.hatch.build.targets.sdist]
include = ["hooks"]

[tool.hatch.build.targets.wheel]
include = ["hooks"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.codespell]
ignore-words = ".codespellignore"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py313"

exclude = [
    "examples/**",
]

[tool.ruff.lint]
# https://beta.ruff.rs/docs/configuration/
preview = true
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "N", # pep8-naming
    "RUF", # Ruff
    "UP", # pyupgrade
    "FA", # flake8-future-annotations
    "ANN", # flake8-annotations
    "PLE", # Pylint Error
    "FAST", # FastAPI
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "S", # flake8-bandit
]

ignore = [
    "E501", # line too long:
    # Disabled based on black recommendations
    # https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
    "E203", # whitespace before ':'
    "E231", # missing whitespace after ','
    "E251", # Unexpected spaces around keyword / parameter equals
    # Disabled because this targets Python 3.9 or later
    "UP007", # Use `X | Y` for type annotations
    "UP045", # Use `X | None` for type annotations
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "S101", # Use of assert detected.
    "S404", # subprocess module is possibly insecure
    "S607", # Starting a process with a partial executable path
    "S403", # pickle, cPickle, dill, and shelve modules are possibly insecure
]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.format]

[tool.coverage.report]
# https://coverage.readthedocs.io/en/coverage-5.0/config.html
show_missing = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/customize.html
# https://docs.pytest.org/en/stable/reference.html#configuration-options
testpaths=[
    "tests"
]
addopts = [
    "--cov-config=pyproject.toml",
    "--capture=no",
    "--tb=native",
    "-ra",
]
log_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S"
log_cli_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"
asyncio_mode = "auto"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
files = "hooks,tests,link_project/pkg_files"
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_cookies.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cookiecutter.*"
ignore_missing_imports = true

[tool.pycln]
# https://hadialqattan.github.io/pycln/#/?id=cli-options
# https://hadialqattan.github.io/pycln/#/?id=example
paths = ["hooks", "tests", "link_project/pkg_files"]

