# https://python-poetry.org/docs/pyproject/
# https://www.python.org/dev/peps/pep-0621/
[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = ""
authors = []
license = "{{ cookiecutter.sdpx_license_identifier }}"
readme = "README.md"
packages = [
    {include = "*", from = "src"},
]

[tool.poetry.scripts]
"{{ cookiecutter.cli_name }}" = "{{ cookiecutter.python_package_fqname }}.cli:main"


[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
pydantic = "^1.10.8"
PyYAML = "^6.0"
# {% if cookiecutter.variant in ["basic", "everything", "minimal_typer"] %}
typer = "0.7.0"
# {% endif %}
# {% if cookiecutter.variant in ["basic", "everything"] %}
structlog = "22.3.0"
# {% endif %}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
codespell = "^2.2.4"
flake8 = "^6.0.0"
flake8-bugbear = "^23.5.9"
flake8-isort = "^6.0.0"
flake8-bandit = "^4.1.1"
isort = "^5.12.0"
mypy = "^1.3.0"
pep8-naming = "^0.13.3"
pycln = "^2.1.3"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
types-click = "^7.1.8"
types-PyYAML = "^6.0.12.10"
typing-extensions = "^4.6.2"
pip-audit = "^2.5.6"
# {% if cookiecutter.build_tool == "poe" %}
poethepoet = "^0.20.0"
# {% endif %}

[tool.coverage.report]
# https://coverage.readthedocs.io/en/coverage-5.0/config.html
show_missing = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files.html
profile = "black"
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov-config=pyproject.toml", "--cov=src"]
# https://docs.pytest.org/en/stable/customize.html
# https://docs.pytest.org/en/stable/reference.html#configuration-options
log_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S"
log_cli_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
files = "src,tests"
mypy_path = "src"
python_version = "{{ cookiecutter.python_version }}"
strict = true
warn_unreachable = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# {% if cookiecutter.build_tool == "poe" %}
[tool.poe.env]
PYTHON_SOURCE="src tests"

[tool.poe.tasks.validate-static]
help = "perform static validation"
sequence = [
    { cmd = "mypy --show-error-context --show-error-codes ${PYTHON_SOURCE}" },
    { cmd = "isort --check --diff ${PYTHON_SOURCE}" },
    { cmd = "black --check --diff ${PYTHON_SOURCE}" },
    { cmd = "flake8 ${PYTHON_SOURCE}" },
    # { shell = "poetry export --without-hashes --with dev --format requirements.txt | poetry run pip-audit --requirement /dev/stdin --no-deps --strict --desc on" },
]

[tool.poe.tasks.test]
help = "run tests"
sequence = [
    { cmd = "pytest" },
]

[tool.poe.tasks.validate-fix]
help = "fix auto fixable validation errors"
sequence = [
    { cmd = "pycln --config=pyproject.toml ${PYTHON_SOURCE}" },
    { cmd = "isort ${PYTHON_SOURCE}" },
    { cmd = "black ${PYTHON_SOURCE}" },
]


[tool.poe.tasks.validate]
help = "validate everything"
sequence = [
    { ref = "validate-static" },
    { ref = "test" },
]

[tool.poe.tasks.fix-and-validate]
help = "fix things then validate"
sequence = [
    { ref = "validate-fix" },
    { ref = "validate" },
]
# {% endif %}

# {% if cookiecutter.use_poetry_dynamic_versioning == "y" %}
# {% raw %}
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base=base, stage=stage, revision=revision) }}
    {%- else -%}
        {{ serialize_pep440(base=bump_version(base), stage=stage, revision=revision, dev=distance, metadata=[commit, "dirty"] if dirty else None ) | replace(".dev", "a") }}
    {%- endif -%}
"""
[tool.poetry-dynamic-versioning.substitution]
files=["src/**/_version.py"]
# {% endraw %}
# {% endif %}

[build-system]
# {% if cookiecutter.use_poetry_dynamic_versioning == "y" %}
requires = ["setuptools","poetry-core>=1.0.0","poetry-dynamic-versioning"]
# {% else %}
requires = ["setuptools","poetry-core>=1.0.0"]
# {% endif %}
build-backend = "poetry.core.masonry.api"
