# https://www.python.org/dev/peps/pep-0621/
[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = ""
authors = []
requires-python = ">={{ cookiecutter.python_version }},<4"
readme = "README.md"
# {% if cookiecutter.sdpx_license_identifier != "UNLICENSED" %}
license = "{{ cookiecutter.sdpx_license_identifier }}"
# {% endif %}

dependencies = [
    "pydantic>=2.12.4,<3",
    "PyYAML>=6.0.3,<7",
# {% if cookiecutter.variant in ["basic", "everything", "minimal_typer"] %}
    "typer>=0.20.0,<0.21",
# {% endif %}
# {% if cookiecutter.variant in ["basic", "everything"] %}
    "structlog>=25.5.0,<26"
# {% endif %}
]


# {% if cookiecutter.variant not in ["nocode"] %}
[project.scripts]
"{{ cookiecutter.cli_name }}" = "{{ cookiecutter.python_package_fqname }}.cli:main"
# {% endif %}

[dependency-groups]
dev = [
    "codespell>=2.4.1,<3",
    "mypy>=1.18.2,<2",
    "pip-audit>=2.9.0,<3",
    "pytest-asyncio>=1.2.0,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest>=9.0.1,<10",
    "ruff>=0.14.3,<0.15",
    "types-PyYAML>=6.0.12.20250915,<7",
    "typing-extensions>=4.15.0,<5",
# {% if cookiecutter.build_tool == "poe" %}
    "poethepoet>=0.37.0,<0.38",
# {% endif %}
]

[tool.uv]
default-groups = [
    "dev",
]

[tool.hatch.build.targets.source]
include = ["src/**"]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src/**"]
sources = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.codespell]
ignore-words = ".codespellignore"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
[tool.ruff.lint]
# https://beta.ruff.rs/docs/configuration/
preview = true
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "N", # pep8-naming
    "RUF", # Ruff
    "UP", # pyupgrade
    "FA", # flake8-future-annotations
    "ANN", # flake8-annotations
    "PLE", # Pylint Error
    "FAST", # FastAPI
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "S", # flake8-bandit
]

ignore = [
    "E501", # line too long:
    # Disabled based on black recommendations
    # https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
    "E203", # whitespace before ':'
    "E231", # missing whitespace after ','
    "E251", # Unexpected spaces around keyword / parameter equals
    # Disabled because this targets Python 3.9 or later
    "UP007", # Use `X | Y` for type annotations
    "UP045", # Use `X | None` for type annotations
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "S101", # Use of assert detected.
    "S404", # subprocess module is possibly insecure
    "S607", # Starting a process with a partial executable path
    "S403", # pickle, cPickle, dill, and shelve modules are possibly insecure
]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.format]

[tool.coverage.report]
# https://coverage.readthedocs.io/en/coverage-5.0/config.html
show_missing = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/customize.html
# https://docs.pytest.org/en/stable/reference.html#configuration-options
testpaths = ["tests"]
addopts = ["--cov-config=pyproject.toml", "--cov=src"]
log_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S"
log_cli_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"
asyncio_mode = "auto"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
files = "src,tests"
mypy_path = "src"
python_version = "{{ cookiecutter.python_version }}"
strict = true
warn_unreachable = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# {% if cookiecutter.build_tool == "poe" %}
[tool.poe.env]
PYTHON_SOURCE="src tests"

[tool.poe.tasks.validate-static]
help = "perform static validation"
sequence = [
    { cmd = "mypy --show-error-context --show-error-codes ${PYTHON_SOURCE}" },
    { cmd = "black --check --diff ${PYTHON_SOURCE}" },
    { cmd = "ruff check --config pyproject.toml ${PYTHON_SOURCE}" },
]

[tool.poe.tasks.test]
help = "run tests"
sequence = [
    { cmd = "pytest" },
]

[tool.poe.tasks.validate-fix]
help = "fix auto fixable validation errors"
sequence = [
    { cmd = "ruff check --config pyproject.toml --fix ${PYTHON_SOURCE}" },
    { cmd = "black ${PYTHON_SOURCE}" },
]


[tool.poe.tasks.validate]
help = "validate everything"
sequence = [
    { ref = "validate-static" },
    { ref = "test" },
]

[tool.poe.tasks.fix-and-validate]
help = "fix things then validate"
sequence = [
    { ref = "validate-fix" },
    { ref = "validate" },
]
# {% endif %}
